--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 <body>
 <!--Header Section -->
 		<div class="header bg-dark">
-			<div class="container"><img width="200" src="images/logo.png" alt="logo" /></div>
+			<div class="container">
+				<img width="200" src="images/logo.png" alt="logo" />
+			</div>
 		</div>
 <!--\End Header Section -->
 	
 <!--Main body Section -->	
-
 <div class="section-gray">
-	<div class="container">
-		<div class="row d-sm-none d-md-block">
-			<div class="col-md-9 col-sm-9">
+	<div class="container">		
+		<div class="row">
+			<div class="col-md-12 col-sm-12">
 					<div class="row">
 						<div class="col-md-6 col-12">
 							<div class="card card-profile">
@@ -38,7 +39,7 @@
 						<div class="col-md-6 col-12">
 							<div class="card card-profile">
 								<div class="card-avatar">
-									<a href="#"> <img class="img" src="images/avatar2.png"> </a>
+									<a href="#"> <img class="img" src="images/suma.jpg"> </a>
 								</div>
 								<div class="table text-center">
 									<h4 class="card-caption">Jasmin Akther Suma</h4>
