--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		<h5 style="text-align:  left">ChatBot</h5>
 		<div id="conversation"></div>
 		<form id="chatform" style="margin-top: 10px" onsubmit="return pushChat();">
-			<input type="text" id="wisdom" size="80" value="" placeholder="i would like to know the package details">
+			<input type="text" id="wisdom" size="80" value="" placeholder="What is my distribution status?">
 		</form>
 </div>
 <!--\end Chatbot -->
@@ -108,6 +108,23 @@
 	<script src="https://sdk.amazonaws.com/js/aws-sdk-2.41.0.min.js"></script>
 	
 	<script type="text/javascript">
+	window.onload = function(){
+			/*Time Calculation*/
+			var currentTime = new Date();
+			if( currentTime.getHours() < 12 ) greetingText = 'Good morning!!';
+			else if( currentTime.getHours() < 17 ) greetingText = 'Good afternoon!!';
+			else 
+				greetingText = 'Good Evening!!';
+			
+			/*Set Greeting in ChatBot*/
+			var conversationDiv = document.getElementById('conversation');
+			var node = document.createElement("h6");               
+			var textnode = document.createTextNode(greetingText);  
+			    
+			node.appendChild(textnode); 
+			conversationDiv.appendChild(node);
+		}
+		
 		// set the focus to the input box
 		document.getElementById("wisdom").focus();
 
@@ -170,6 +187,7 @@
 			requestPara.appendChild(document.createTextNode(daText));
 			conversationDiv.appendChild(requestPara);
 			conversationDiv.scrollTop = conversationDiv.scrollHeight;
+			
 		}
 
 		function showError(daText) {
@@ -191,14 +209,14 @@
 				responsePara.appendChild(document.createTextNode(lexResponse.message));
 				responsePara.appendChild(document.createElement('br'));
 			}
-			if (lexResponse.dialogState === 'ReadyForFulfillment') {
-				responsePara.appendChild(document.createTextNode(
-					'Ready for fulfillment'));
-				// TODO:  show slot values
-			} else {
-				responsePara.appendChild(document.createTextNode(
-					'(' + lexResponse.dialogState + ')'));
-			}
+			// if (lexResponse.dialogState === 'ReadyForFulfillment') {
+			// 	responsePara.appendChild(document.createTextNode(
+			// 		'Ready for fulfillment'));
+			// 	// TODO:  show slot values
+			// } else {
+			// 	responsePara.appendChild(document.createTextNode(
+			// 		'(' + lexResponse.dialogState + ')'));
+			// }
 			conversationDiv.appendChild(responsePara);
 			conversationDiv.scrollTop = conversationDiv.scrollHeight;
 		}
